kubernetes/legacy/apps/zulip/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zulip
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "zulip.k8s.local"
  rules:
    - backendRefs:
        - name: zulip
          port: 80
